# iai_maps

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml
chemistry_laboratory/: CMakeLists.txt  package.xml
chemistry_laboratory/meshes/: accumax_pipette.dae  bunsen_burner.dae  centrifuge_eba20.dae  optical_table.dae
iai_apartment/: CMakeLists.txt  package.xml
iai_apartment/launch/: Kitchen2_ReadMe.md  apartment_bringup.launch  apartment_display.launch  apartment_upload.launch  kitchen2_display.launch  upload_apartment.launch
iai_apartment/maps/: apartment_unreal_10cm.yaml  map_19_08_2022.yaml  map_24_08_2022.pgm  map_24_08_2022.yaml  map_25_08_2022.pgm  map_25_08_2022.yaml  map_v1.yaml
iai_apartment/meshes/IAIKitchenPartW310H90/: IAIKitchenPartW310H90.dae  IAIKitchenPartW310H90.stl
iai_apartment/meshes/IAIKitchenPartW314H90/: IAIKitchenPartW314H90.stl
iai_apartment/meshes/IAIKitchenVisiblePartIslandUnderSideW90H60/: IAIKitchenVisiblePartIslandUnderSideW90H60.stl
iai_apartment/meshes/IAIKitchenVisiblePartUnderSideW90H58/: IAIKitchenVisiblePartUnderSideW90H58.stl
iai_apartment/meshes/IAIKitchenVisiblePartUppersideW80H39/: IAIKitchenVisiblePartUppersideW80H39.dae
iai_apartment/meshes/cabinet01/: IAICabinet1W60.dae  IAIDoorW60H80.dae  IAIDoorW60H80.stl  IAIDrawerW60H26.dae  IAIDrawerW60H26.stl  IAIDrawerW60H53.dae  IAIDrawerW60H53.stl  oven.mtl  oven.stl
iai_apartment/meshes/cabinet02/: IAICabinet2W40H57.dae  IAIDoorW40H212.dae  IAIDrawerW40H10.dae  IAIDrawerW40H22.dae
iai_apartment/meshes/cabinet03/: IAIDoorW60H133.dae  IAIDoorW60H80.dae
iai_apartment/meshes/cabinet04/: IAIDoor1W100H40.dae  IAIDoor2W100H40.dae  IAIDoor2W100H40.stl  IAIKitchenCabinet4W100.stl
iai_apartment/meshes/cabinet05/: IAIKitchenCabinet5W60.dae  IAIKitchenDrawerW60H13.dae  IAIKitchenDrawerW60H13.stl  IAIKitchenDrawerW60H26.dae  IAIKitchenDrawerW60H40.dae
iai_apartment/meshes/cabinet06/: IAIKitchenCabinet6W40.dae  IAIKitchenCabinet6W40.stl  IAIKitchenDrawerW40H13.dae  IAIKitchenDrawerW40H26.dae  IAIKitchenDrawerW40H26.stl  IAIKitchenDrawerW40H40.dae  IAIKitchenDrawerW40H40.stl
iai_apartment/meshes/cabinet07/: IAIKitchenCabinet7W60.dae  IAIKitchenDoorW60H80.dae  dishwasher_drawer_middle.dae  dishwasher_drawer_middle.stl
iai_apartment/meshes/cabinet08/: IAIKitchenCabinet8W60.stl  IAIKitchenCabinet8W60_v2.stl  IAIKitchenDrawerW56H10.dae  IAIKitchenDrawerW56H10.stl
iai_apartment/meshes/cabinet09/: IAIKitchenCabinet9W60.stl  IAIKitchenDrawerW60H13.dae  IAIKitchenDrawerW60H13.stl  IAIKitchenDrawerW60H26.dae  IAIKitchenDrawerW60H40.dae  IAIKitchenDrawerW60H40.stl
iai_apartment/meshes/cabinet10/: IAIKitchenCabinet9W40.dae  IAIKitchenCabinet9W40.stl  IAIKitchenDrawerW40H13.dae  IAIKitchenDrawerW40H13.stl  IAIKitchenDrawerW40H26.dae  IAIKitchenDrawerW40H40.dae
iai_apartment/meshes/cabinet11/: IAIKitchenCabinet11W90.stl  IAIKitchenDrawerW90H13.dae  IAIKitchenDrawerW90H26.dae  IAIKitchenDrawerW90H26.stl  IAIKitchenDrawerW90H40.dae  IAIKitchenDrawerW90H40.stl
iai_apartment/meshes/cabinet12/: IAICabinet12W60.stl  IAIDoorW60H80.dae  IAIDoorW60H80.stl
iai_apartment/meshes/collision/: armchair.stl  armchair_lowres.stl  bedside_table.stl  coffee_table.stl  coffee_table_drawer.stl  package.stl  sofa.stl  sofa_lowres.stl  walls.stl  wardrobe.stl  wardrobe_door_handle.mtl  wardrobe_door_handle.stl  wardrobe_door_left.mtl  wardrobe_door_left.stl  wardrobe_door_right.mtl  wardrobe_door_right.stl  windows.stl
iai_apartment/meshes/cooktop/: IAIKitchenCookTop.dae  IAIKitchenCookTop_backup.dae
iai_apartment/meshes/countertop/: IAIKitchenPartW102H60.dae
iai_apartment/meshes/handles/: window_handle.stl  (+2 more)
iai_apartment/owl/: SOMA-HOME-addons.owl  iai-apartment.owl
iai_apartment/rviz_config/: rviz_config.rviz
iai_apartment/urdf/: apartment.urdf  apartment.xacro  apartment_unreal.urdf  apartment_unreal.xacro  apartment_unreal_with_window4.urdf  apartment_unreal_with_window4.xacro  apartment_with_window4.xacro  furnitures.xacro  furnitures_with_window4.xacro  iai-apartment.urdf  kitchen.urdf  kitchen.xacro  kitchen.xarco  kitchen_unreal.xacro
iai_dlr_cutting_demo/: CMakeLists.txt  README.md  package.xml
iai_dlr_cutting_demo/config/: display.rviz
iai_dlr_cutting_demo/launch/: display.launch
iai_dlr_cutting_demo/urdf/: map.urdf
iai_kitchen_defs/: CMakeLists.txt  package.xml
iai_kitchen_defs/defs/: util_defs.xml
iai_kitchen_defs/room/: allInOne.urdf.xml  bio_area.urdf.xml  cnc_area.urdf.xml  colorTest.urdf.xml  kitchen_area.urdf.xml  lab_macros.xml  room.urdf.xml  shopping_area.urdf.xml  test.urdf.xml  worktables.urdf.xml
iai_maps/: CMakeLists.txt  package.xml
iai_maps/launch/: iai_maps_nogroundmap.launch  json.launch  kitchen_with_state_publisher.launch  map.launch  map2.launch  map_boxy.launch  map_restricted.launch  map_robohow_y3.launch  no_json_obj.launch  room.launch  stp_pancake_table.launch
iai_maps/maps/: dm_karlsruhe_20190331.yaml  dm_karlsruhe_backroom_20190401.yaml  map-2016-06-17.pgm  map-2016-06-17.yaml  map-2017-11-02.pgm  map-2017-11-02.yaml  map-2017-11-ease-demo.pgm  map-2017-11-ease-demo.yaml  map-2020-09-ease-demo.pgm  map-2020-09-ease-demo.yaml  map.pgm  map.yaml  map2.pgm  map2.yaml  map3.pgm  map_hallway.pgm  map_hallway.yaml  map_hallway_edited.pgm  map_hallway_edited.yaml  map_restricted.yaml  map_robohow_2015.pgm  map_robohow_2015.yaml
iai_refills_lab/: CMakeLists.txt  package.xml
iai_refills_lab/maps/: dm-room.urdf.xacro  dm_shelves.urdf.xacro  map-5mm.yaml  map-5mm_clean.yaml  refills_lab.pgm  refills_lab.xcf  refills_lab.yaml  refills_lab_kmr_iiwa.pgm  refills_lab_kmr_iiwa.xcf  refills_lab_kmr_iiwa.yaml  refills_lab_raw.pgm  refills_lab_unreal_10cm.yaml
iai_refills_lab/script/: pixel_coordinates_to_m.py
iai_refills_lab/urdf/: dm_room.urdf.xacro  dm_shelf_macros.urdf.xacro  dm_shelves.urdf.xacro
iai_semantic_maps/: CMakeLists.txt  package.xml
iai_semantic_maps/owl/: catalog-v001.xml  iai_maps_addons.owl  kitchen.owl  kitchen_new.owl  kitchen_popcorn.owl  room.owl  room.owl.in
iai_semantic_maps/prolog/: init.pl  room.pl.in
(+519 files in other folders)
