<?xml version="1.0"?>
<package format="2">
  <name>iai_dlr_cutting_demo</name>
  <version>0.0.0</version>
  <description>
    A set of maps describing the cutting setups in Oberpfaffenhofen and Bremen.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>iai_cad_downloader</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>

  </export>

</package>
