<package>
  <name>iai_semantic_maps</name>
  <version>1.0.0</version>
  <description>Semantic maps of laboratories of the IAI in Bremen</description>
  
  <maintainer email="tenorth@cs.uni-bremen.de">Moritz Tenorth</maintainer>

  <license>LGPL</license>

  <url type="website">http://www.ros.org/wiki/knowrob_map_data</url>
  <url type="bugtracker">https://github.com/knowrob/knowrob/issues</url>

  <author>Jan Winkler</author>
  <author>Moritz Tenorth</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
